# nyc-report-heat

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: daily-report-heat.yml  pages.yml
config/: default.yml
data/: candidates.jsonl
outputs/: daily_summary.md  link_heat.csv  new_candidates.csv  new_candidates.jsonl  ranked.csv  ranked.jsonl  sample_report.md  top_reports.csv  top_rules.csv
site/: app.js  index.html  styles.css
site/data/: dashboard.json
src/nyc_report_heat/: __init__.py  cli.py  config.py  dates.py  discovery.py  heat.py  http.py  io.py  models.py  scoring.py  urltools.py
tests/: test_daily_contract.py  test_dashboard_feed.py  test_heat_collection.py  test_heat_windows.py  test_urltools.py
