[project]
name = "nyc-report-heat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uzair Qadir", email = "umqadir@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "typer>=0.26.3",
]

[project.scripts]
nyc-report-heat = "nyc_report_heat:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
